--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.12.0"
-  },
-  "dependencies": {
-    "@chainlink/contracts": "^0.5.1",
     "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/test-helpers": "^0.5.16",
     "dotenv": "^16.0.3",
+    "hardhat": "^2.12.0",
     "hardhat-docgen": "^1.3.0"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^0.5.1",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.6"
   }
 }
